--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-test!
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Король Лев - Классика Disney</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav class="navbar">
+        <div class="nav-content">
+            <div class="nav-logo">
+                <a href="#">Король Лев</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#about">О фильме</a></li>
+                <li><a href="#characters">Герои</a></li>
+                <li><a href="#quotes">Цитаты</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header class="hero">
+        <div class="hero-content">
+            <h1>Король Лев</h1>
+            <p class="subtitle">"Эпическая История о храбрости дружбе и судьбе"</p>
+        </div>
+    </header>
+
+<main>
+   <section class="about" id="about">
+    <h2>О мультфильме</h2>
+    <p>"Король Лев" - Анимационный шедевр студии Disney, выпущенный в 1994 году. Фильм рассказывает
+        историю львенка Симбы, который должен пройти путь от беззабоного детства до ответственного
+        правителя Саванны.
+   </p>
+   <p>История повествует о важных жизненных уроках, семейных ценностях и ответственности. Это рассказ о
+      взрослении, Преодолении трудностей и поески своего места в "круге жизни"
+   </p>
+   </section> 
+
+   <section class="characters" id="characters">
+    <h2>Главные Герои</h2>
+    <div class="character-grid">
+        <article class="character-card">
+            <img src="https://avatars.dzeninfra.ru/get-zen_doc/1107063/pub_5cb5b83980f66f00b38794a6_5cb5ba114ac08900b36a4649/scale_1200" alt="Симба">
+                <div class="character-info">
+                    <h3>Симба</h3>
+                    <p class="character-title">Главный Герой</p>
+                    <p>Молодой Лев, наследник престола. Храбрый и благородный принц, который дожен преодолеть
+                        множество испытаний
+                    </p>
+                    <a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B8%D0%BC%D0%B1%D0%B0">Узнать больше</a>
+                </div>
+        </article>
+        <article class="character-card">
+            <img src="https://0d314c86-f76b-45cc-874e-45816116a667.selcdn.net/65cc63ef-bd9b-4992-907d-0e6ca0fd3d79.jpg" alt="Муфаса">
+                <div class="character-info">
+                    <h3>Муфаса</h3>
+                    <p class="character-title">Король Прайда</p>
+                    <p>Мудрый и сильный король, отец Симбы. Учит сына важным жизненным урокам и ответственности
+                        правителя
+                    </p>
+                </div>
+        </article>
+        <article class="character-card">
+            <img src="https://cdn.ananasposter.ru/image/cache/catalog/poster/mult/98/1679-1000x830.jpg" alt="Муфаса">
+                <div class="character-info">
+                    <h3>Тимон и Пумба</h3>
+                    <p class="character-title">Друзья Симбы</p>
+                    <p>Забавная парочка, которая спасает и воспитывает Симбу, обучая его
+                    </p>
+                </div>
+        </article>
+    </div>
+   </section>
+
+   <section class="quotes" id="quotes">
+        <h2> Знаменитые Цитаты</h2>
+        <blockquote>
+            "помни кто ты есть. Ты мой сын и истинный король"
+            <footer>- Муфаса</footer>
+        </blockquote>
+        <blockquote>
+            "Хакуна Матата! Живи без забот"
+            <footer>- Тимон и Пумба</footer>
+        </blockquote>
+   </section>
+</main>
+
+<footer class="site-footer">
+<p>Создано для изучения HTML и CSS</p>
+<p>Сарагутдинов Максим - 2025</p>
+</footer>
+
+
+</body>
+</html>
